# rola

./: .gitignore  LICENSE  README.md  analytical_cost.py  cla_bench.py  eval_lm.py  local_env.sh  pyproject.toml  rola.py  run_lm_ab.sh  train_lm.py
rola_fla_dev/: BENCH.md  README.md  STEPS.md  bench.py  check.py  check_den_gla.py  decode_bench.py  paper_bench.py  paper_flops.py  parity_model.py
rola_hf/: __init__.py  configuration_rola.py  modeling_rola.py
rola_kernels/: __init__.py  ops.py
