[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rola"
version = "0.1.0"
description = "Routed Linear Attention (RoLA) — project root (docs, venv, planning). The model + kernels live in the fla-rola fork; MQAR instances/dens moved into rola-bench."
readme = "README.md"
requires-python = ">=3.10"
# Light deps only. torch is environment-provided (pinned by the image/venv), and the FLA
# kernels (fla-core) + the routed fork (fla-rola) are installed separately so we don't fight
# their versions here. rola imports fla.* and (optionally) fla_rola.* at runtime.
dependencies = [
    "torch",
    "einops",
]

[tool.setuptools]
# No importable module anymore — the model is fla_rola.layers.RoLA / fla_rola.models.rola, and the
# former rola.py helpers (rola_instance, eager dens) moved into rola-bench. This stays an installable
# (deps-only) metadata package so `pip install -e .` and the image build remain valid.
py-modules = []
